// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormCheck > appends custom className to wrapper element 1`] = `
<DocumentFragment>
  <div
    class="flex items-center extra-class"
  >
    <input
      class="h-4 w-4 bg-background text-primary-600 rounded border-input ring-offset-background focus:outline-none focus:border-input focus:ring focus:ring-ring focus:ring-offset-0 disabled:opacity-50"
      type="checkbox"
    />
  </div>
</DocumentFragment>
`;

exports[`FormCheck > renders \`disabled=false\` properly 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <input
      class="h-4 w-4 bg-background text-primary-600 rounded border-input ring-offset-background focus:outline-none focus:border-input focus:ring focus:ring-ring focus:ring-offset-0 disabled:opacity-50"
      type="checkbox"
    />
  </div>
</DocumentFragment>
`;

exports[`FormCheck > renders \`disabled\` properly 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <input
      class="h-4 w-4 bg-background text-primary-600 rounded border-input ring-offset-background focus:outline-none focus:border-input focus:ring focus:ring-ring focus:ring-offset-0 disabled:opacity-50"
      disabled=""
      type="checkbox"
    />
  </div>
</DocumentFragment>
`;

exports[`FormCheck > renders properly 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <input
      class="h-4 w-4 bg-background text-primary-600 rounded border-input ring-offset-background focus:outline-none focus:border-input focus:ring focus:ring-ring focus:ring-offset-0 disabled:opacity-50"
      type="checkbox"
    />
    <label
      class="ml-2 block text-sm text-chrome-900"
    >
      My Label
    </label>
  </div>
</DocumentFragment>
`;
